--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.main.allow-circular-references=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/enterprise_expense
 spring.datasource.username=root
-spring.datasource.password=@Nshika23
+spring.datasource.password=yourpassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate Config
@@ -17,8 +17,8 @@ app.jwtExpirationMs=86400000
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=meanshika2003@gmail.com
-spring.mail.password=@Nshika38
+spring.mail.username=username
+spring.mail.password=your password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
